# abieos

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  abieos-config.cmake.in  gen_ship_abi_cpp.cmake
include/abieos/: reflection.hpp
include/eosio/: abi.hpp  abieos_name.hpp  asset.hpp  bytes.hpp  chain_conversions.hpp  check.hpp  config.hpp  convert.hpp  crypto.hpp  eosio_outcome.hpp  fixed_bytes.hpp  float.hpp  for_each_field.hpp  from_bin.hpp  from_json.hpp  from_key.hpp  from_string.hpp  map_macro.h  name.hpp  opaque.hpp  operators.hpp  parse_json.hpp  reflection.hpp  ship_protocol.hpp  stream.hpp  symbol.hpp  time.hpp  to_bin.hpp  to_json.hpp  to_key.hpp  types.hpp  varint.hpp
src/: abi.cpp  abieos.cpp  abieos.h  abieos.hpp  abieos_exception.hpp  abieos_numeric.hpp  abieos_ripemd160.hpp  crypto.cpp  fuzzer.cpp  fuzzer.hpp  key_test.cpp  ripemd160.hpp  ship.abi.cpp  ship_abi.cpp  ship_abi_gen.cpp  template_test.cpp  test.cpp
test/: package.json  tsconfig.json  webpack.config.js
test/src/: test.ts
tools/: CMakeLists.txt  hex_to_json.c
